--- a/index.html
+++ b/index.html
@@ -448,7 +448,7 @@
                 );
                 
                 // Android版直链
-                const androidDirectUrl = 'https://lz.qaiu.top/parser?url=https://wx.mail.qq.com/s?k=p73Wz2d5Q_wjfZImCr';
+                const androidDirectUrl = 'https://lz.qaiu.top/parser?url=https://wx.mail.qq.com/s?k=m7Hp1HxxSOYVjeReHx';
                 
                 // 创建下载链接
                 const link = document.createElement('a');
@@ -479,4 +479,5 @@
         });
     </script>
 </body>
+
 </html>
